<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/schedule_notify_system">
        <menu>
            <item
                android:id="@+id/nav_sn_dashboard"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/title_dashboard" />
            <item
                android:id="@+id/nav_sn_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/title_notifications" />
            <item
                android:id="@+id/nav_sn_types"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="提醒类型"
                />
            <item
                android:id="@+id/nav_sn_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="设置" />
        </menu>
    </item>
</menu>
