<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_schedule_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/schedule_type"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxNeedNotify"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxNeedNotify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEndTime" />

    <CheckBox
        android:id="@+id/checkBoxNeedNotify"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:text="@string/checkbox_isNotify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextType" />

    <Button
        android:id="@+id/buttonStartTime"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:text="@string/string_start_time"
        app:layout_constraintBottom_toTopOf="@+id/buttonEndTime"
        app:layout_constraintEnd_toEndOf="@+id/buttonEndTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEndTime"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:text="@string/string_end_time"
        app:layout_constraintBottom_toTopOf="@+id/editTextType"
        app:layout_constraintEnd_toEndOf="@+id/editTextType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTime" />

</android.support.constraint.ConstraintLayout>